--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ proj   <- sprintf("+proj=laea +lon_0=%f +lat_0=%f +ellps=sphere", st_coordinates
 bfr    <- st_transform(center, proj) %>% st_buffer(2500*1000) %>% st_geometry()
 # map  <- ne_download(scale = 50, type = "land", category = 'physical', destdir = "tmp")
 map    <- st_read("tmp/ne_50m_land.shp", quiet = TRUE) %>% st_geometry() %>% st_transform(proj) %>% 
-              st_buffer(0) %>% st_intersection(bfr) %>% st_difference(bfr)
+              st_buffer(0) %>% st_intersection(bfr)
 
 rstPr  <- mask(crop(projectRaster(rst, crs = CRS(proj)), as(bfr, "Spatial")), as(map, "Spatial"), inverse = FALSE)
 
@@ -524,12 +524,6 @@ crds <- evi$crds
 ind  <- matrix(c(crds[,2]<90, crds[,2]>64, crds[,2]<=64), nrow = 3, byrow = TRUE)
 
 ### 2008 - 2020
-
-eviTrend <- lapply(1:3, function(l)
-  apply(evi$eviM[ind[l,],], 2, function(x) {
-    quantile(x, probs = c(0.025, 0.5, 0.975), na.rm = T)
-  }))
-
 eviStats <- do.call("cbind",lapply(1:3, function(l) {
       tmp <- data.frame(year = rep(2008:2020, each = sum(ind[l,])), 
                         evi = c(evi$eviM[ind[l,],]),
@@ -550,12 +544,6 @@ colnames(eviStats) <- c("Breeding area", "Northern subset", "Southern subset")
 
 
 ### 2008-2014
-
-eviTrend2 <- lapply(1:3, function(l)
-  apply(evi$eviM[ind[l,],which(2008:2020<=2014)], 2, function(x) {
-    quantile(x, probs = c(0.025, 0.5, 0.975), na.rm = T)
-  }))
-
 eviStats2 <- do.call("cbind",lapply(1:3, function(l) {
       tmp <- data.frame(year = rep(2008:2014, each = sum(ind[l,])), 
                         evi = c(evi$eviM[ind[l,],which(2008:2020<=2014)]),
@@ -602,6 +590,7 @@ invisible(
       with(newdat, lines(year, y1, lty = 1, lwd = 2.5, col = "darkgreen"))
       
       
+      
       tmp <- data.frame(year = rep(2008:2014, each = sum(ind[l,])), 
                         evi = c(evi$eviM[ind[l,],which(2008:2020<=2014)]),
                         cell = rep(which(ind[l,]), length(2008:2014)))
@@ -640,9 +629,11 @@ load("results/eviStats.rda")
 knitr::kable(eviStats)
 ```
 
-### Comparison between calcualted green-up date/trends with MODIS MCD12Q2 Land Cover Dynamic values (2008-2018).
+### MODIS MCD12Q2 Land Cover Dynamic greenup trends (2008-2018) in comparison with above calculated greenup trend.
 
-```{r}
+1. Get MODIS MCD12Q2 Land Cover Dynamic Greenup days for the years 2008 to 2018 (and pixel quality estimate).
+
+```{r modis1, eval = FALSE}
 library(rgee)
 ee_Initialize()
 
@@ -679,68 +670,110 @@ if(y==2008) {
 
 }
 
-save(MOD12gup, file = "results/MOD12gup.rda")
 
-
-library(nlme)
-library(lmerTest)
-library(lme4)
-library(merTools)
-library(mgcv)
-library(glue)
-
-opar <- par(mar = c(3,3,1,1), mfrow = c(1,3))
-
-rng <- apply(MOD12gup, 2, function(x) quantile(x[x>10], probs = c(0.025, 0.5, 0.975), na.rm = T))
-
-plot(2008:2018, rng[2,], type = "n", ylim = range(rng))
-polygon(c(2008:2018, 2018:2008), c(rng[1,], rev(rng[3,])), col = "grey80", border = NA)
-lines(2008:2018, rng[2,], lwd = 2, type = "o")
-
-tmp <- data.frame(year = rep(2008:2018, each = nrow(MOD12gup)), 
-                        evi = c(MOD12gup),
-                        cell = rep(1:nrow(MOD12gup), length(2008:2018)))
-
-      tmp <- subset(tmp, evi>10 & !is.na(evi) & !is.nan(evi) & !is.infinite(evi))
-      
-      lm <- lmer(evi ~ year + (1|cell), data = tmp[sample(1:nrow(tmp), 25000),], na.action = na.omit)
-      
-      newdat  <- data.frame(year = 2008:2018)
-      mm      <- model.matrix(~year, newdat)
-
-      newdat$y1 <- mm%*%fixef(lm)
-      with(newdat, lines(year, y1, lty = 1, lwd = 2.5, col = "darkgreen"))
-
-
-rng <- apply(MOD12gup[coordinates(rOut)[,2]>64,], 2, function(x) quantile(x, probs = c(0.025, 0.5, 0.975), na.rm = T))
-plot(2008:2018, rng[2,], type = "n", ylim = range(rng))
-polygon(c(2008:2018, 2018:2008), c(rng[1,], rev(rng[3,])), col = "grey80", border = NA)
-lines(2008:2018, rng[2,], lwd = 2, type = "o")
-
-
-tmp <- data.frame(year = rep(2008:2018, each = nrow(MOD12gup)), 
-                        evi = c(MOD12gup),
-                        cell = rep(1:nrow(MOD12gup), length(2008:2018)))
-
-      tmp <- subset(tmp, evi>10 & !is.na(evi) & !is.nan(evi) & !is.infinite(evi))
-      
-      lm <- lmer(evi ~ year + (1|cell), data = tmp[sample(1:nrow(tmp), 25000),], na.action = na.omit)
-      
-      newdat  <- data.frame(year = 2008:2018)
-      mm      <- model.matrix(~year, newdat)
-
-      newdat$y1 <- mm%*%fixef(lm)
-      with(newdat, lines(year, y1, lty = 1, lwd = 2.5, col = "darkgreen"))
-
-rng <- apply(MOD12gup[coordinates(rOut)[,2]<64,], 2, function(x) quantile(x, probs = c(0.025, 0.5, 0.975), na.rm = T))
-plot(2008:2018, rng[2,], type = "n", ylim = range(rng))
-polygon(c(2008:2018, 2018:2008), c(rng[1,], rev(rng[3,])), col = "grey80", border = NA)
-lines(2008:2018, rng[2,], lwd = 2, type = "o")
-
-par(opar)
+MODgup  <- list(crds = coordinates(rOut), mod = MOD12gup)
+save(MODgup, file = "results/MODgup.rda")
 ```
 
+2. Trend statistics and comparison.
 
+```{r modis2, eval = FALSE, include = FALSE}
+crdsSTAR <- evi$crds
+indSTAR  <- matrix(c(crdsSTAR[,2]<90, crdsSTAR[,2]>64, crdsSTAR[,2]<=64), nrow = 3, byrow = TRUE)
+
+crdsMOD  <- MODgup$crds
+indMOD  <- matrix(c(crdsMOD[,2]<90, crdsMOD[,2]>64, crdsMOD[,2]<=64), nrow = 3, byrow = TRUE)
+
+
+png("images/Fig05_MOD_STARcomp.png", width = 800, height = 350, res = 100)
+opar <- par(mar = c(3,3,1,1), mfrow = c(1,3), oma = c(1,3,3,1), las = 1)
+
+for(l in 1:3) {
+  
+  rngMOD  <- apply(MODgup$mod[indMOD[l,],], 2, function(x) quantile(x[x>10], probs = c(0.025, 0.5, 0.975), na.rm = T))
+  rngSTAR <- apply(evi$eviM[indSTAR[l,],which(2008:2020<=2018)], 2, function(x) quantile(x, probs = c(0.025, 0.5, 0.975), na.rm = T))
+  
+  plot(2008:2018, rngMOD[2,], type = "n", ylim = range(rngMOD))
+  polygon(c(2008:2018, 2018:2008), c(rngMOD[1,], rev(rngMOD[3,])), col = "grey85", border = NA)
+  polygon(c(2008:2018, 2018:2008), c(rngSTAR[1,], rev(rngSTAR[3,])), col = "grey45", border = NA)
+  lines(2008:2018, rngMOD[2,], lwd = 4)
+  lines(2008:2018, rngSTAR[2,], lwd = 4, lty = 3)
+  
+  
+  ## MOD trendline
+  tmp <- data.frame(year = rep(2008:2018, each = sum(indMOD[l,])), 
+                    gup  = c(MODgup$mod[indMOD[l,],]),
+                    cell = rep(which(indMOD[l,]), length(2008:2018)))
+      
+  tmp <- subset(tmp, !is.na(gup) & !is.nan(gup) & !is.infinite(gup) & gup > 1)
+      
+  lm <- lmer(gup ~ year + (1|cell), data = tmp[sample(1:nrow(tmp), 15000),], na.action = na.omit)
+  
+  newdat  <- data.frame(year = 2008:2018)
+  mm      <- model.matrix(~year, newdat)
+
+  newdat$y1 <- mm%*%fixef(lm)
+  with(newdat, lines(year, y1, lty = 1, lwd = 2.5, col = "darkgreen"))
+ 
+  outMod <- c(Median = round(summary(lm)$coefficients[2,1], 3), suppressMessages(confint(lm, parm = "year")), se = sd(bsim@fixef[,2])/sqrt(length(bsim@fixef[,2])))
+  tbMod  <- glue("{round(outMod[1],3)} d/yr ± SE {round(outMod[4],4)}; (95% Cl, {round(outMod[2],3)}, {round(outMod[3],3)})")   
+  
+  
+  ## STAR trendline
+  tmp <- data.frame(year = rep(2008:2018, each = sum(indSTAR[l,])), 
+                    gup  = c(evi$eviM[indSTAR[l,],which(2008:2020<=2018)]),
+                    cell = rep(which(indSTAR[l,]), length(2008:2018)))
+      
+  tmp <- subset(tmp, !is.na(gup) & !is.nan(gup) & !is.infinite(gup) & gup > 1)
+      
+  lm <- lmer(gup ~ year + (1|cell), data = tmp, na.action = na.omit)
+  
+  newdat  <- data.frame(year = 2008:2018)
+  mm      <- model.matrix(~year, newdat)
+
+  newdat$y1 <- mm%*%fixef(lm)
+  with(newdat, lines(year, y1, lty = 3, lwd = 2.5, col = "darkgreen"))
+ 
+  if(l==1) {
+    legend("bottomleft", pch = c(15, 15, NA, NA), lty = c(NA, NA, 1,3), c("MODIS greenup", "NOAA STAR estimates", "MODIS trend", "NOAA STAR trend"), cex = 1.2,
+           col = c("grey85", "grey45", "darkgreen", "darkgreen"), lwd = 2)
+    mtext("Greenup date (15%)", 2, line = 3.4, las = 3)
+  }
+  mtext(c("Breeding range", "Northern subset", "Southern subset")[l], 3, line = 1)
+  
+  
+  outSTAR <- c(Median = round(summary(lm)$coefficients[2,1], 3), suppressMessages(confint(lm, parm = "year")), se = sd(bsim@fixef[,2])/sqrt(length(bsim@fixef[,2])))
+  tbSTAR  <- glue("{round(outSTAR[1],3)} d/yr ± SE {round(outSTAR[4],4)}; (95% Cl, {round(outSTAR[2],3)}, {round(outSTAR[3],3)})") 
+  
+  statsOut <- rbind(tbMod, tbSTAR)
+  if(l==1) {
+    statsTab <- statsOut
+  } else {
+    statsTab <- cbind(statsTab, statsOut)
+  }
+  
+}
+
+par(opar)
+dev.off()
+
+colnames(statsTab) <- c("Breeding area", "Northern subset", "Southern subset")
+save(statsTab, file = "results/statsTab.rda")
+```
+
+```{r, include  = FALSE}
+load("results/statsTab.rda")
+```
+
+<center>
+  <img src="images/Fig05_MOD_STARcomp.png"></img>
+  <figcaption>Figure 5: Comparison of trends in MODIS MCD12Q2 Greenup and NOAA STAR greenup estimates.</figcaption>
+</center>
+
+
+```{r MODSTARTable}
+knitr::kable(statsTab)
+```
 
 
 ### References
